--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=7.0",
         "omnipay/common": "~3.0",
-        "developercielo/api-3.0-php": "1.2"
+        "developercielo/api-3.0-php": "^1.2"
     },
     "require-dev": {
         "omnipay/tests": "~3.0"
